--- a/src/COMPONENTS/produkt.css
+++ b/src/COMPONENTS/produkt.css
@@ -10,4 +10,12 @@
 
 .imgBorder{
     border: 1px solid green;
+    width: 100%;
+    height: 100%;
+}
+
+
+.buContainer{
+    display: flex;
+    justify-content: center;
 }
