--- a/src/COMPONENTS/Register.css
+++ b/src/COMPONENTS/Register.css
@@ -86,7 +86,7 @@ input {
 }
 
 .container {
-	background-color: #fff;
+	/* background-color: #fff;
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
 			0 10px 10px rgba(0,0,0,0.22);
@@ -94,7 +94,7 @@ input {
 	overflow: hidden;
 	width: 1000px;
 	max-width: 100%;
-	min-height: 480px;
+	min-height: 480px; */
 }
 
 .form-container {
