--- a/src/COMPONENTS/produkt.css
+++ b/src/COMPONENTS/produkt.css
@@ -4,12 +4,12 @@
 }
 
 .items{
-    margin: 5rem;
-    border: 1px solid red;
+    margin: 2rem;
+    border: 1px solid lightgray;
 }
 
 .imgBorder{
-    border: 1px solid green;
+    
     width: 100%;
     height: 100%;
 }
