--- a/src/COMPONENTS/Home.css
+++ b/src/COMPONENTS/Home.css
@@ -15,6 +15,7 @@
 
 .container {
 	background-color: #fff;
+	/* background-color: linear-gradient(to right, #ffbb3d, #e47734 #fa423b); */
 	border-radius: 10px;
   	box-shadow: 0 14px 28px rgba(0,0,0,0.25);
 	position: relative;
@@ -38,7 +39,10 @@ p {
 	letter-spacing: 0.5px;
 	margin: 20px 0 30px;
 }
-
+.pclass{
+	padding-left: 1rem;
+	width: 70%;
+}
 span {
 	font-size: 12px;
 }
@@ -47,5 +51,7 @@ span {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 10rem;
+    margin-top: 6rem;
 }
+
+
