--- a/src/COMPONENTS/produkt.css
+++ b/src/COMPONENTS/produkt.css
@@ -22,3 +22,10 @@
     display: flex;
     justify-content: center;
 }
+
+@media screen and (max-width: 780px) {
+    .buContainer{
+        display: flex;
+        justify-content: flex-start;
+    } 
+}
