--- a/src/COMPONENTS/Dashboard.css
+++ b/src/COMPONENTS/Dashboard.css
@@ -47,15 +47,15 @@ body{
 
 @media screen and (max-width: 780px) {
 	.dashboard{
-    display: grid;
-    grid-template-rows: auto auto 1fr auto;
-    grid-template-columns: 10rem auto 1fr 100px;
+    
+    grid-template-rows: auto auto auto auto;
+    grid-template-columns: auto;
   
     grid-template-areas: 
-      " logo logo . . "
-      ". navbar navbar ."
-      " . main main . "
-      " footer footer footer footer"
+      "logo "
+      "navbar"
+      " main "
+      " footer"
       ;
   }
 
