--- a/src/COMPONENTS/Home.css
+++ b/src/COMPONENTS/Home.css
@@ -13,7 +13,7 @@
     margin-bottom: 3rem;
 }
 
-.container {
+.container2 {
 	background-color: #fff;
 	/* background-color: linear-gradient(to right, #ffbb3d, #e47734 #fa423b); */
 	border-radius: 10px;
