--- a/src/COMPONENTS/Home.css
+++ b/src/COMPONENTS/Home.css
@@ -1,57 +1,95 @@
-
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
 
 
-.home{
+.home {
     background: #f6f5f7;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	font-family: 'Montserrat', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Montserrat', sans-serif;
     margin-top: 3rem;
     margin-bottom: 3rem;
 }
 
 .container2 {
-	background-color: #fff;
-	/* background-color: linear-gradient(to right, #ffbb3d, #e47734 #fa423b); */
-	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25);
-	position: relative;
-	overflow: hidden;
-	width: 1000px;
-	max-width: 100%;
-	min-height: 480px; 
-	
+    /*background-color: #fff;*/
+	background-image: linear-gradient(to right, #ffbb3d, #e47734, #fa423b);
+	/* background: linear-gradient(to right, #4b5fcb, #954170, #ba5b41, #f9af38); */
+    border-radius: 10px;
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25);
+    position: relative;
+    overflow: hidden;
+    width: 1000px;
+    max-width: 100%;
+    min-height: 480px;
+
+}
+
+@media screen and (max-width: 780px) {
+    .container2 {
+        width: 90%;
+        padding: 2rem;
+    }
+
 }
 
 h3 {
-	font-weight: bold;
+    font-weight: bold;
     margin: 1rem;
     text-align: center;
 }
 
-p {
-	font-size: 14px;
-	font-weight: 100;
-	line-height: 20px;
-	letter-spacing: 0.5px;
-	margin: 20px 0 30px;
-}
-.pclass{
-	padding-left: 1rem;
-	width: 70%;
-}
-span {
-	font-size: 12px;
+.hclass{
+	color: white;
+	text-shadow: 2px 2px black;
 }
 
-.home-container{
+.p_class{
+	font-size: medium;
+	color: white;
+}
+
+p {
+    font-size: 20px;
+    font-weight: 100;
+    line-height: 20px;
+    letter-spacing: 0.5px;
+    margin: 20px 0 30px;
+    
+}
+
+.pclass {
+    padding-left: 1rem;
+	width: 70%;
+	color: white;
+	font-size: medium;
+	
+}
+
+@media screen and (max-width: 780px) {
+    .pclass {
+        width: 100%;
+        padding : 0;
+
+    }
+}
+
+span {
+    font-size: 12px;
+}
+
+.home-container {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin-top: 6rem;
+}
+
+@media screen and (max-width: 780px) {
+    .home-container {
+        margin-top: 0;
+    }
 }
 
 
