--- a/src/COMPONENTS/Navbar.css
+++ b/src/COMPONENTS/Navbar.css
@@ -3,7 +3,7 @@
     margin-top: 2.8rem;
     margin-left: 5rem;
     justify-content: flex-start;
-    
+
 }
 
 .navbar-item{
@@ -15,6 +15,6 @@
         display: flex;
         margin-top: 2.8rem;
         justify-content: flex-start;
-        
+        margin-left: unset;
     }
 }
