--- a/src/COMPONENTS/newProdukt.css
+++ b/src/COMPONENTS/newProdukt.css
@@ -88,6 +88,13 @@ input {
 	min-height: 480px;
 }
 
+
+@media screen and (max-width: 780px) {
+	.container {
+		width: 100%;
+	}
+}
+
 .form-container {
 	position: absolute;
 	top: 0;
@@ -118,8 +125,8 @@ footer a {
 
 @media screen and (max-width: 780px) {
 	.buContainer{
-       margin-right: 40rem;
-	}  
-	
-	
+       /*margin-right: 40rem;*/
+	}
+
+
 }
